# personaltelegrambot

./: .gitignore  main.py  pyproject.toml  requirements.txt  response.json  sample.json
api/: __init__.py  backend.py
firebase/: __init__.py  db.py  main.py  repldb.py
