[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.11"
Flask = "^2.2.0"
urllib3 = "1.26.15"
poetry = "1.1.13"
telebot = "^0.0.5"
firebase-admin = "^6.2.0"
replit = "^3.3.1"
Flask-Cors = "^4.0.0"
api = "^0.0.7"
firebase = "^4.0.1"
pandas = "^2.1.1"

[tool.poetry.dev-dependencies]
debugpy = "^1.6.2"
replit-python-lsp-server = {extras = ["yapf", "rope", "pyflakes"], version = "^1.5.9"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"